name:		        X11
version:	        1.3.0
license:	        BSD3
license-file:	    LICENSE
copyright:	        Alastair Reid, 1999-2003, libraries@haskell.org 2003-2007
maintainer:	        Don Stewart <dons@galois.com>
category:	        Graphics
synopsis:	        A binding to the X11 graphics library
description:	    A Haskell binding to the X11 graphics library.
	.
	The binding is a direct translation of the C binding; for
	documentation of these calls, refer to "The Xlib Programming
	Manual", available online at <http://tronche.com/gui/x/xlib/>.
extra-source-files:
	configure.ac configure
	config.mk.in X11.buildinfo.in include/HsX11Config.h.in
	include/HsXlib.h
extra-tmp-files:
	config.log config.status autom4te.cache
	config.mk X11.buildinfo include/HsX11Config.h
    include/X11_extras_config.h
exposed-modules:
	Graphics.X11,
	Graphics.X11.Types,
	Graphics.X11.Xlib,
	Graphics.X11.Xlib.Atom,
	Graphics.X11.Xlib.Color,
	Graphics.X11.Xlib.Context,
	Graphics.X11.Xlib.Display,
	Graphics.X11.Xlib.Event,
	Graphics.X11.Xlib.Font,
	Graphics.X11.Xlib.Misc,
	Graphics.X11.Xlib.Region,
	Graphics.X11.Xlib.Screen,
	Graphics.X11.Xlib.Types,
	Graphics.X11.Xlib.Window,
	Graphics.X11.Xlib.Image,
    Graphics.X11.Xlib.Extras,
    Graphics.X11.Xinerama
c-sources:
	cbits/fdset.c,
	cbits/auxiliaries.c,
    cbits/XUtils.c
extensions:	        ForeignFunctionInterface, CPP
extra-libraries:    "X11"
extra-source-files:
    include/XlibExtras.h
    include/X11_extras_config.h.in
    configure.ac
    configure
    X11.buildinfo.in
include-dirs:	    include
includes:           HsXlib.h
install-includes:   HsXlib.h,
                    XlibExtras.h
build-depends:	    base
build-type:         Configure
ghc-options:        -O2 -funbox-strict-fields -Wall
