name:               X11
version:            1.5.0.1
license:            BSD3
license-file:       LICENSE
copyright:          Alastair Reid, 1999-2003, libraries@haskell.org 2003-2007, Don Stewart 2007-2009, Spencer Janssen 2007-2009.
maintainer:         Daniel Wagner <daniel@wagner-home.com>
homepage:           https://github.com/haskell-pkg-janitors/X11
category:           Graphics
synopsis:           A binding to the X11 graphics library
description:        A Haskell binding to the X11 graphics library.
    The binding is a direct translation of the C binding; for
    documentation of these calls, refer to "The Xlib Programming
    Manual", available online at <http://tronche.com/gui/x/xlib/>.
extra-source-files:
    configure.ac configure
    config.mk.in X11.buildinfo.in include/HsX11Config.h.in
    include/HsXlib.h include/XlibExtras.h include/X11_extras_config.h.in
    include/HsAllKeysyms.h
extra-tmp-files:
    config.log config.status autom4te.cache
    config.mk X11.buildinfo include/HsX11Config.h
    include/X11_extras_config.h
Cabal-Version: >= 1.2
build-type:         Configure

flag smaller_base
    description: Build with the even smaller base.

library
  exposed-modules:
      Graphics.X11,
      Graphics.X11.Types,
      Graphics.X11.Xlib,
      Graphics.X11.Xlib.Atom,
      Graphics.X11.Xlib.Color,
      Graphics.X11.Xlib.Context,
      Graphics.X11.Xlib.Cursor,
      Graphics.X11.Xlib.Display,
      Graphics.X11.Xlib.Event,
      Graphics.X11.Xlib.Font,
      Graphics.X11.Xlib.Misc,
      Graphics.X11.Xlib.Region,
      Graphics.X11.Xlib.Screen,
      Graphics.X11.Xlib.Types,
      Graphics.X11.Xlib.Window,
      Graphics.X11.Xlib.Image,
      Graphics.X11.Xlib.Extras,
      Graphics.X11.Xinerama
      Graphics.X11.ExtraTypes,
      Graphics.X11.ExtraTypes.AP,
      Graphics.X11.ExtraTypes.DEC,
      Graphics.X11.ExtraTypes.HP,
      Graphics.X11.ExtraTypes.Sun
      Graphics.X11.ExtraTypes.XF86,
      Graphics.X11.ExtraTypes.XorgDefault
  c-sources:
      cbits/fdset.c,
      cbits/auxiliaries.c,
      cbits/XUtils.c
  extensions:         ForeignFunctionInterface, CPP
  extra-libraries:    "X11"
  include-dirs:       include
  includes:           HsXlib.h, HsAllKeysyms.h
  install-includes:   HsXlib.h, XlibExtras.h, HsAllKeysyms.h
  if flag(smaller_base)
      build-depends: base >= 4 && < 5, syb
  else
      build-depends: base >= 3 && < 4
  ghc-options:        -funbox-strict-fields -Wall -fno-warn-unused-binds
  ghc-prof-options:   -prof -auto-all
